--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             const today = new Date();
             const timeDifference = today - startDate;
             const days = Math.floor(timeDifference / (1000 * 3600 * 24));
-            document.getElementById('days-count').innerText = `${days} Dias que tu é minha hihi`;
-            document.getElementById('start-date').innerText = `Tu tá desde 01/07/2024 me aturando em momor, que guerreira 🙈`;
+            document.getElementById('days-count').innerText = `${days} Dias que tu virou minha momo 🩷`;
+            document.getElementById('start-date').innerText = `Nossa morzinho,desde 1 de julho me aguentando? Como tu é guerreiraa minha vida(Desce a pagina e leia com carinho 🥺)`;
         }
 
         // Chama a função para calcular os dias e exibir na tela
