--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             const today = new Date();
             const timeDifference = today - startDate;
             const days = Math.floor(timeDifference / (1000 * 3600 * 24));
-            document.getElementById('days-count').innerText = `${days} Dias que tu virou minha momo 🩷`;
+            document.getElementById('days-count').innerText = `${days} Dias que tu virou minha momo,te amo demais🩷`;
             document.getElementById('start-date').innerText = `Nossa morzinho,desde 1 de julho me aguentando? Como tu é guerreiraa minha vida(Desce a pagina e leia com carinho 🥺)`;
         }
 
