--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             const today = new Date();
             const timeDifference = today - startDate;
             const days = Math.floor(timeDifference / (1000 * 3600 * 24));
-            document.getElementById('days-count').innerText = `${days} Dias que tu virou minha momo,te amo demais🩷`;
-            document.getElementById('start-date').innerText = `Nossa morzinho,desde 1 de julho me aguentando? Como tu é guerreiraa minha vida(Desce a pagina e leia com carinho 🥺)`;
+            document.getElementById('days-count').innerText = `${days} Dias com minha momo,te amo demais🩷`;
+            document.getElementById('start-date').innerText = `Affs meu momor,${days} dias desde que tu entrou na minha vida,no dia 1 de julho de 2024,nesse mesmo dia já sabia que tu ia ser minha esposa hihi`;
         }
 
         // Chama a função para calcular os dias e exibir na tela
