--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             const timeDifference = today - startDate;
             const days = Math.floor(timeDifference / (1000 * 3600 * 24));
             document.getElementById('days-count').innerText = `${days} Dias com minha momo,te amo demais🩷`;
-            document.getElementById('start-date').innerText = `Affs meu momor,${days} dias desde que tu entrou na minha vida,no dia 1 de julho de 2024,nesse mesmo dia já sabia que tu ia ser minha esposa hihi`;
+            document.getElementById('start-date').innerText = `Afffff,hoje faz exatos ${days} dias que tu entrou na minha vida meu bem,desde o dia 1 de julho de 2024,quando tu entrou  na minha vida,tu só vem me deixando mais ciente de que é a mulher que eu quero pra todo sempreee te amo morzinho 🩷`;
         }
 
         // Chama a função para calcular os dias e exibir na tela
